phase02/parser.output
State 153 conflicts: 1 shift/reduce


Grammar

    0 $accept: programm $end

    1 programm: stmts

    2 stmts: stmt stmts
    3      | /* empty */

    4 stmt: error stmt
    5     | ILLEGAL
    6     | expr SEMICOL
    7     | ifstmt
    8     | whilestmt
    9     | forstmt
   10     | returnstmt
   11     | BREAK_KEYWORD SEMICOL
   12     | CONTINUE_KEYWORD SEMICOL
   13     | block
   14     | funcdef
   15     | SEMICOL

   16 expr: assignexpr
   17     | expr PLUS_OP expr
   18     | expr SUB_OP expr
   19     | expr MULL_OP expr
   20     | expr DIV_OP expr
   21     | expr EQ_OP expr
   22     | expr NEQ_OP expr
   23     | expr MOD_OP expr
   24     | expr GEQ_OP expr
   25     | expr LEQ_OP expr
   26     | expr GRE_OP expr
   27     | expr LESS_OP expr
   28     | expr AND_KEYWORD expr
   29     | expr OR_KEYWORD expr
   30     | term

   31 term: L_PAR expr R_PAR
   32     | SUB_OP expr
   33     | NOT_KEYWORD expr
   34     | PLUSPLUS_OP lvalue
   35     | lvalue PLUSPLUS_OP
   36     | SUBSUB_OP lvalue
   37     | lvalue SUBSUB_OP
   38     | primary

   39 assignexpr: lvalue ASS_OP expr

   40 primary: lvalue
   41        | call
   42        | tablemake
   43        | L_PAR funcdef R_PAR
   44        | const

   45 lvalue: ID
   46       | LOCAL_KEYWORD ID
   47       | glbl ID
   48       | tableitem

   49 glbl: GLOBAL_KEYWORD
   50     | D_FULLST D_FULLST

   51 tableitem: lvalue FULLST ID
   52          | lvalue L_BR expr R_BR
   53          | call FULLST ID
   54          | call L_BR expr R_BR

   55 call: call L_PAR elist R_PAR
   56     | lvalue L_PAR elist R_PAR
   57     | L_PAR funcdef R_PAR L_PAR elist R_PAR

   58 elist: expr elist1s
   59      | /* empty */

   60 elist1s: elist1 elist1s
   61        | /* empty */

   62 elist1: COMMA expr

   63 indexed: indexedelem ind1s

   64 ind1s: ind1 ind1s
   65      | /* empty */

   66 ind1: COMMA indexedelem

   67 indexedelem: L_AG expr D_FULLST expr R_AG

   68 tablemake: L_BR tsize R_BR

   69 tsize: elist
   70      | indexed

   71 @1: /* empty */

   72 block: L_AG @1 stmts R_AG

   73 @2: /* empty */

   74 @3: /* empty */

   75 funcdef: FUNCTION_KEYWORD fid L_PAR @2 idlist R_PAR @3 block

   76 fid: ID
   77    | /* empty */

   78 const: INTCONST
   79      | FLOATCONST
   80      | STRING
   81      | NIL_KEYWORD
   82      | TRUE_KEYWORD
   83      | FALSE_KEYWORD

   84 idlist: ID id1s
   85       | /* empty */

   86 id1: COMMA ID

   87 id1s: id1 id1s
   88     | /* empty */

   89 ifstmt: IF_KEYWORD L_PAR expr R_PAR stmt elsestmt

   90 elsestmt: ELSE_KEYWORD stmt
   91         | /* empty */

   92 whilestmt: WHILE_KEYWORD L_PAR expr R_PAR stmt

   93 forstmt: FOR_KEYWORD L_PAR elist SEMICOL expr SEMICOL elist R_PAR stmt

   94 returnstmt: RETURN_KEYWORD prexpr SEMICOL

   95 prexpr: expr
   96       | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256) 4
INTCONST (258) 78
FLOATCONST (259) 79
STRING (260) 80
ID (261) 45 46 47 51 53 76 84 86
IF_KEYWORD (262) 89
FOR_KEYWORD (263) 93
ELSE_KEYWORD (264) 90
FUNCTION_KEYWORD (265) 75
WHILE_KEYWORD (266) 92
RETURN_KEYWORD (267) 94
BREAK_KEYWORD (268) 11
CONTINUE_KEYWORD (269) 12
LOCAL_KEYWORD (270) 46
TRUE_KEYWORD (271) 82
FALSE_KEYWORD (272) 83
NIL_KEYWORD (273) 81
AND_KEYWORD (274) 28
OR_KEYWORD (275) 29
NOT_KEYWORD (276) 33
GLOBAL_KEYWORD (277) 49
PLUSPLUS_OP (278) 34 35
SUBSUB_OP (279) 36 37
MULL_OP (280) 19
DIV_OP (281) 20
EQ_OP (282) 21
PLUS_OP (283) 17
SUB_OP (284) 18 32
ASS_OP (285) 39
NEQ_OP (286) 22
MOD_OP (287) 23
GEQ_OP (288) 24
LEQ_OP (289) 25
GRE_OP (290) 26
LESS_OP (291) 27
L_PAR (292) 31 43 55 56 57 75 89 92 93
R_PAR (293) 31 43 55 56 57 75 89 92 93
L_AG (294) 67 72
R_AG (295) 67 72
L_BR (296) 52 54 68
R_BR (297) 52 54 68
COMMA (298) 62 66 86
SEMICOL (299) 6 11 12 15 93 94
FULLST (300) 51 53
D_FULLST (301) 50 67
ILLEGAL (302) 5
UMINUS (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
programm (50)
    on left: 1, on right: 0
stmts (51)
    on left: 2 3, on right: 1 2 72
stmt (52)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 2 4 89 90 92
    93
expr (53)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30,
    on right: 6 17 18 19 20 21 22 23 24 25 26 27 28 29 31 32 33 39
    52 54 58 62 67 89 92 93 95
term (54)
    on left: 31 32 33 34 35 36 37 38, on right: 30
assignexpr (55)
    on left: 39, on right: 16
primary (56)
    on left: 40 41 42 43 44, on right: 38
lvalue (57)
    on left: 45 46 47 48, on right: 34 35 36 37 39 40 51 52 56
glbl (58)
    on left: 49 50, on right: 47
tableitem (59)
    on left: 51 52 53 54, on right: 48
call (60)
    on left: 55 56 57, on right: 41 53 54 55
elist (61)
    on left: 58 59, on right: 55 56 57 69 93
elist1s (62)
    on left: 60 61, on right: 58 60
elist1 (63)
    on left: 62, on right: 60
indexed (64)
    on left: 63, on right: 70
ind1s (65)
    on left: 64 65, on right: 63 64
ind1 (66)
    on left: 66, on right: 64
indexedelem (67)
    on left: 67, on right: 63 66
tablemake (68)
    on left: 68, on right: 42
tsize (69)
    on left: 69 70, on right: 68
block (70)
    on left: 72, on right: 13 75
@1 (71)
    on left: 71, on right: 72
funcdef (72)
    on left: 75, on right: 14 43 57
@2 (73)
    on left: 73, on right: 75
@3 (74)
    on left: 74, on right: 75
fid (75)
    on left: 76 77, on right: 75
const (76)
    on left: 78 79 80 81 82 83, on right: 44
idlist (77)
    on left: 84 85, on right: 75
id1 (78)
    on left: 86, on right: 87
id1s (79)
    on left: 87 88, on right: 84 87
ifstmt (80)
    on left: 89, on right: 7
elsestmt (81)
    on left: 90 91, on right: 89
whilestmt (82)
    on left: 92, on right: 8
forstmt (83)
    on left: 93, on right: 9
returnstmt (84)
    on left: 94, on right: 10
prexpr (85)
    on left: 95 96, on right: 94


state 0

    0 $accept: . programm $end

    error             shift, and go to state 1
    INTCONST          shift, and go to state 2
    FLOATCONST        shift, and go to state 3
    STRING            shift, and go to state 4
    ID                shift, and go to state 5
    IF_KEYWORD        shift, and go to state 6
    FOR_KEYWORD       shift, and go to state 7
    FUNCTION_KEYWORD  shift, and go to state 8
    WHILE_KEYWORD     shift, and go to state 9
    RETURN_KEYWORD    shift, and go to state 10
    BREAK_KEYWORD     shift, and go to state 11
    CONTINUE_KEYWORD  shift, and go to state 12
    LOCAL_KEYWORD     shift, and go to state 13
    TRUE_KEYWORD      shift, and go to state 14
    FALSE_KEYWORD     shift, and go to state 15
    NIL_KEYWORD       shift, and go to state 16
    NOT_KEYWORD       shift, and go to state 17
    GLOBAL_KEYWORD    shift, and go to state 18
    PLUSPLUS_OP       shift, and go to state 19
    SUBSUB_OP         shift, and go to state 20
    SUB_OP            shift, and go to state 21
    L_PAR             shift, and go to state 22
    L_AG              shift, and go to state 23
    L_BR              shift, and go to state 24
    SEMICOL           shift, and go to state 25
    D_FULLST          shift, and go to state 26
    ILLEGAL           shift, and go to state 27

    $end  reduce using rule 3 (stmts)

    programm    go to state 28
    stmts       go to state 29
    stmt        go to state 30
    expr        go to state 31
    term        go to state 32
    assignexpr  go to state 33
    primary     go to state 34
    lvalue      go to state 35
    glbl        go to state 36
    tableitem   go to state 37
    call        go to state 38
    tablemake   go to state 39
    block       go to state 40
    funcdef     go to state 41
    const       go to state 42
    ifstmt      go to state 43
    whilestmt   go to state 44
    forstmt     go to state 45
    returnstmt  go to state 46


state 1

    4 stmt: error . stmt

    error             shift, and go to state 1
    INTCONST          shift, and go to state 2
    FLOATCONST        shift, and go to state 3
    STRING            shift, and go to state 4
    ID                shift, and go to state 5
    IF_KEYWORD        shift, and go to state 6
    FOR_KEYWORD       shift, and go to state 7
    FUNCTION_KEYWORD  shift, and go to state 8
    WHILE_KEYWORD     shift, and go to state 9
    RETURN_KEYWORD    shift, and go to state 10
    BREAK_KEYWORD     shift, and go to state 11
    CONTINUE_KEYWORD  shift, and go to state 12
    LOCAL_KEYWORD     shift, and go to state 13
    TRUE_KEYWORD      shift, and go to state 14
    FALSE_KEYWORD     shift, and go to state 15
    NIL_KEYWORD       shift, and go to state 16
    NOT_KEYWORD       shift, and go to state 17
    GLOBAL_KEYWORD    shift, and go to state 18
    PLUSPLUS_OP       shift, and go to state 19
    SUBSUB_OP         shift, and go to state 20
    SUB_OP            shift, and go to state 21
    L_PAR             shift, and go to state 22
    L_AG              shift, and go to state 23
    L_BR              shift, and go to state 24
    SEMICOL           shift, and go to state 25
    D_FULLST          shift, and go to state 26
    ILLEGAL           shift, and go to state 27

    stmt        go to state 47
    expr        go to state 31
    term        go to state 32
    assignexpr  go to state 33
    primary     go to state 34
    lvalue      go to state 35
    glbl        go to state 36
    tableitem   go to state 37
    call        go to state 38
    tablemake   go to state 39
    block       go to state 40
    funcdef     go to state 41
    const       go to state 42
    ifstmt      go to state 43
    whilestmt   go to state 44
    forstmt     go to state 45
    returnstmt  go to state 46


state 2

   78 const: INTCONST .

    $default  reduce using rule 78 (const)


state 3

   79 const: FLOATCONST .

    $default  reduce using rule 79 (const)


state 4

   80 const: STRING .

    $default  reduce using rule 80 (const)


state 5

   45 lvalue: ID .

    $default  reduce using rule 45 (lvalue)


state 6

   89 ifstmt: IF_KEYWORD . L_PAR expr R_PAR stmt elsestmt

    L_PAR  shift, and go to state 48


state 7

   93 forstmt: FOR_KEYWORD . L_PAR elist SEMICOL expr SEMICOL elist R_PAR stmt

    L_PAR  shift, and go to state 49


state 8

   75 funcdef: FUNCTION_KEYWORD . fid L_PAR @2 idlist R_PAR @3 block

    ID  shift, and go to state 50

    $default  reduce using rule 77 (fid)

    fid  go to state 51


state 9

   92 whilestmt: WHILE_KEYWORD . L_PAR expr R_PAR stmt

    L_PAR  shift, and go to state 52


state 10

   94 returnstmt: RETURN_KEYWORD . prexpr SEMICOL

    INTCONST        shift, and go to state 2
    FLOATCONST      shift, and go to state 3
    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    LOCAL_KEYWORD   shift, and go to state 13
    TRUE_KEYWORD    shift, and go to state 14
    FALSE_KEYWORD   shift, and go to state 15
    NIL_KEYWORD     shift, and go to state 16
    NOT_KEYWORD     shift, and go to state 17
    GLOBAL_KEYWORD  shift, and go to state 18
    PLUSPLUS_OP     shift, and go to state 19
    SUBSUB_OP       shift, and go to state 20
    SUB_OP          shift, and go to state 21
    L_PAR           shift, and go to state 22
    L_BR            shift, and go to state 24
    D_FULLST        shift, and go to state 26

    $default  reduce using rule 96 (prexpr)

    expr        go to state 53
    term        go to state 32
    assignexpr  go to state 33
    primary     go to state 34
    lvalue      go to state 35
    glbl        go to state 36
    tableitem   go to state 37
    call        go to state 38
    tablemake   go to state 39
    const       go to state 42
    prexpr      go to state 54


state 11

   11 stmt: BREAK_KEYWORD . SEMICOL

    SEMICOL  shift, and go to state 55


state 12

   12 stmt: CONTINUE_KEYWORD . SEMICOL

    SEMICOL  shift, and go to state 56


state 13

   46 lvalue: LOCAL_KEYWORD . ID

    ID  shift, and go to state 57


state 14

   82 const: TRUE_KEYWORD .

    $default  reduce using rule 82 (const)


state 15

   83 const: FALSE_KEYWORD .

    $default  reduce using rule 83 (const)


state 16

   81 const: NIL_KEYWORD .

    $default  reduce using rule 81 (const)


state 17

   33 term: NOT_KEYWORD . expr

    INTCONST        shift, and go to state 2
    FLOATCONST      shift, and go to state 3
    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    LOCAL_KEYWORD   shift, and go to state 13
    TRUE_KEYWORD    shift, and go to state 14
    FALSE_KEYWORD   shift, and go to state 15
    NIL_KEYWORD     shift, and go to state 16
    NOT_KEYWORD     shift, and go to state 17
    GLOBAL_KEYWORD  shift, and go to state 18
    PLUSPLUS_OP     shift, and go to state 19
    SUBSUB_OP       shift, and go to state 20
    SUB_OP          shift, and go to state 21
    L_PAR           shift, and go to state 22
    L_BR            shift, and go to state 24
    D_FULLST        shift, and go to state 26

    expr        go to state 58
    term        go to state 32
    assignexpr  go to state 33
    primary     go to state 34
    lvalue      go to state 35
    glbl        go to state 36
    tableitem   go to state 37
    call        go to state 38
    tablemake   go to state 39
    const       go to state 42


state 18

   49 glbl: GLOBAL_KEYWORD .

    $default  reduce using rule 49 (glbl)


state 19

   34 term: PLUSPLUS_OP . lvalue

    ID              shift, and go to state 5
    LOCAL_KEYWORD   shift, and go to state 13
    GLOBAL_KEYWORD  shift, and go to state 18
    L_PAR           shift, and go to state 59
    D_FULLST        shift, and go to state 26

    lvalue     go to state 60
    glbl       go to state 36
    tableitem  go to state 37
    call       go to state 61


state 20

   36 term: SUBSUB_OP . lvalue

    ID              shift, and go to state 5
    LOCAL_KEYWORD   shift, and go to state 13
    GLOBAL_KEYWORD  shift, and go to state 18
    L_PAR           shift, and go to state 59
    D_FULLST        shift, and go to state 26

    lvalue     go to state 62
    glbl       go to state 36
    tableitem  go to state 37
    call       go to state 61


state 21

   32 term: SUB_OP . expr

    INTCONST        shift, and go to state 2
    FLOATCONST      shift, and go to state 3
    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    LOCAL_KEYWORD   shift, and go to state 13
    TRUE_KEYWORD    shift, and go to state 14
    FALSE_KEYWORD   shift, and go to state 15
    NIL_KEYWORD     shift, and go to state 16
    NOT_KEYWORD     shift, and go to state 17
    GLOBAL_KEYWORD  shift, and go to state 18
    PLUSPLUS_OP     shift, and go to state 19
    SUBSUB_OP       shift, and go to state 20
    SUB_OP          shift, and go to state 21
    L_PAR           shift, and go to state 22
    L_BR            shift, and go to state 24
    D_FULLST        shift, and go to state 26

    expr        go to state 63
    term        go to state 32
    assignexpr  go to state 33
    primary     go to state 34
    lvalue      go to state 35
    glbl        go to state 36
    tableitem   go to state 37
    call        go to state 38
    tablemake   go to state 39
    const       go to state 42


state 22

   31 term: L_PAR . expr R_PAR
   43 primary: L_PAR . funcdef R_PAR
   57 call: L_PAR . funcdef R_PAR L_PAR elist R_PAR

    INTCONST          shift, and go to state 2
    FLOATCONST        shift, and go to state 3
    STRING            shift, and go to state 4
    ID                shift, and go to state 5
    FUNCTION_KEYWORD  shift, and go to state 8
    LOCAL_KEYWORD     shift, and go to state 13
    TRUE_KEYWORD      shift, and go to state 14
    FALSE_KEYWORD     shift, and go to state 15
    NIL_KEYWORD       shift, and go to state 16
    NOT_KEYWORD       shift, and go to state 17
    GLOBAL_KEYWORD    shift, and go to state 18
    PLUSPLUS_OP       shift, and go to state 19
    SUBSUB_OP         shift, and go to state 20
    SUB_OP            shift, and go to state 21
    L_PAR             shift, and go to state 22
    L_BR              shift, and go to state 24
    D_FULLST          shift, and go to state 26

    expr        go to state 64
    term        go to state 32
    assignexpr  go to state 33
    primary     go to state 34
    lvalue      go to state 35
    glbl        go to state 36
    tableitem   go to state 37
    call        go to state 38
    tablemake   go to state 39
    funcdef     go to state 65
    const       go to state 42


state 23

   72 block: L_AG . @1 stmts R_AG

    $default  reduce using rule 71 (@1)

    @1  go to state 66


state 24

   68 tablemake: L_BR . tsize R_BR

    INTCONST        shift, and go to state 2
    FLOATCONST      shift, and go to state 3
    STRING          shift, and go to state 4
    ID              shift, and go to state 5
    LOCAL_KEYWORD   shift, and go to state 13
    TRUE_KEYWORD    shift, and go to state 14
    FALSE_KEYWORD   shift, and go to state 15
    NIL_KEYWORD     shift, and go to state 16
    NOT_KEYWORD     shift, and go to state 17
    GLOBAL_KEYWORD  shift, and go to state 18
    PLUSPLUS_OP     shift, and go to state 19
    SUBSUB_OP       shift, and go to state 20
    SUB_OP          shift, and go to state 21
    L_PAR           shift, and go to state 22
    L_AG            shift, and go to state 67
    L_BR            shift, and go to state 24
    D_FULLST        shift, and go to state 26

    $default  reduce using rule 59 (elist)

    expr         go to state 68
    term         go to state 32
    assignexpr   go to state 33
    primary      go to state 34
    lvalue       go to state 35
    glbl         go to state 36
    tableitem    go to state 37
    call         go to state 38
    elist        go to state 69
    indexed      go to state 70
    indexedelem  go to state 71
    tablemake    go to state 39
    tsize        go to state 72
    const        go to state 42


state 25

   15 stmt: SEMICOL .

    $default  reduce using rule 15 (stmt)


state 26

   50 glbl: D_FULLST . D_FULLST

    D_FULLST  shift, and go to state 73


state 27

    5 stmt: ILLEGAL .

    $default  reduce using rule 5 (stmt)


state 28

    0 $accept: programm . $end

    $end  shift, and go to state 74


state 29

    1 programm: stmts .

    $default  reduce using rule 1 (programm)


state 30

    2 stmts: stmt . stmts
